# rtest

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.rst  Cargo.toml  README.md  benchmark.sh  benchmark_pytest.sh  benchmark_repositories.py  prompt.md  pyproject.toml  repositories.yml  rtest_prompt.txt  summary.md  test_parametrize_example.py
.claude/: CLAUDE.md
.claude/scripts/: quality-check.sh
.github/workflows/: ci.yml  release.yml  test-release.yml
python/rtest/: __init__.py  mark.py  raises.py
python/rustic/: __init__.py  _rustic.pyi
rtest/: Cargo.toml
rtest-core/: Cargo.toml
rtest-core/src/: cli.rs  collection.rs  collection_integration.rs  collection_service.rs  downcast.rs  error.rs  lib.rs  pytest_executor.rs  runner.rs  scheduler.rs  (+3 more)
scripts/: install-git-hooks.sh
src/: cli.rs  collection.rs  collection_integration.rs  config.rs  lib.rs  main.rs  native_runner.rs  pyo3.rs  pytest_executor.rs  runner.rs
tests/: cli_integration.rs  cli_parallel_options.rs  collection_comparison.rs  collection_integration.rs  documentation_examples.rs  real_file_integration.rs  test_ast_parsing_integration.py  test_cli_integration.py  test_collection_integration.py  test_collection_service.rs  test_end_to_end.py  test_error_handling.rs  test_execution_integration.py  test_execution_integration.rs  test_helpers.py  test_loadgroup_integration.py  test_multiple_errors.rs  test_native_runner.py  test_parallel_logic.py  test_parametrized_examples.py  test_raises.py  test_real_file_integration.py  test_scheduler_api.rs  test_skip.py  test_utils.py  unit_parallel_logic.rs
(+39 files in other folders)
